correct preload for fonts

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preload" href="fonts/gilroy-black.ttf" as="font">
-    <link rel="preload" href="fonts/ProximaNova-Bold.ttf" as="font">
-    <link rel="preload" href="fonts/ProximaNova-Regular.ttf" as="font">
+    <link rel="preload" href="fonts/gilroy-black.ttf" as="font"type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" href="fonts/ProximaNova-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">>
+    <link rel="preload" href="fonts/ProximaNova-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">>
 
     <link rel="preload" href="css/style.css" as="style">
     <link rel="preload" href="js/timer.js" as="script">
