--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="video__inner">
                 <h2 class="title title-video">Заголовок для видео</h2>
                 <!-- /.title -->
-                <iframe class="video__inner--item" src="https://www.youtube.com/embed/SEEV5RuiIcU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe loading="lazy" class="video__inner--item" src="https://www.youtube.com/embed/SEEV5RuiIcU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <!-- /.video__inner -->
         </div>
@@ -113,7 +113,7 @@
     </section>
     <!-- /.video -->
     <section class="package">
-        <img class="package-img" src="img/animal-min.png" alt="Art">
+        <img class="package-img" loading="lazy" src="img/animal-min.png" alt="Art">
         <div class="title title-dark">Уроки по саморазвитию на любой вкус</div>
         <!-- /.title -->
         <div class="package__inner" id="course">
@@ -249,7 +249,7 @@
             <div class="autor__inner">
                 <div class="autor__inner--line">
                     <div class="autor__inner--item">
-                        <img src="img/vadim-min.jpg" alt="Вадим Куркин" class="autor__inner--img">
+                        <img src="img/vadim-min.jpg" loading="lazy" alt="Вадим Куркин" class="autor__inner--img">
                     </div>
                     <!-- /.autor__inner-item -->
                     <div class="autor__inner--item">
@@ -291,7 +291,7 @@
                     </div>
                     <!-- /.autor__inner-item -->
                     <div class="autor__inner--item">
-                        <img src="img/yulya-min.jpg" alt="Юлия Куркина" class="autor__inner--img">
+                        <img src="img/yulya-min.jpg" loading="lazy" alt="Юлия Куркина" class="autor__inner--img">
                     </div>
                     <!-- /.autor__inner-item -->
                 </div>
