decided to change block 'package'

--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
         <!-- /.container -->
     </section>
     <!-- /.intro -->
-
     <section class="video">
         <div class="container">
             <div class="video__inner">
@@ -112,135 +111,172 @@
         <!-- /.container -->
     </section>
     <!-- /.video -->
-    <section class="package">
-        <img class="package-img" loading="lazy" src="img/animal-min.png" alt="Art">
-        <div class="title title-dark">Уроки по саморазвитию на любой вкус</div>
+    <div class="package">
+        <h2 class="title title-dark">Уроки по саморазвитию на любой вкус</h2>
         <!-- /.title -->
-        <div class="package__inner" id="course">
-            <div class="package__inner--item package__item">
+        <div class="package__inner">
+            <div class="package__item">
+                <img class="package__img package__img--white" src="img/animal-1.svg" alt="Бычок">
                 <div class="package__item--header">
-                    <h3 class="package__item--header__title -dark">I пакет</h3>
-                    <!-- /.package__item-header__title -->
-                    <h4 class="package__item--header__subtitle -dark">Чтобы увидеть описание курса, нажмите на название</h4>
-                    <!-- /.package__item-header__subtitle -->
+                    <h4 class="package__item--header__title">I пакет</h4>
+                    <!-- /.package__item--header__title -->
+                    <small>Чтобы увидеть описание курса, нажмите на название</small>
                 </div>
                 <!-- /.package__item-header -->
-                <div class="package__item--text">
-                    <a class="package__link -dark" href="#ex1" rel="modal:open">"Осознанное родительство" 1 и 2 ступень</a>
-                    <div id="ex1" class="modal modal__inf">
-                        <p class="modal__inf--title">Курс “Осознанное родительство”<br> I ступень</p>
-                        <!-- /.modal__inf-title -->
-                        <p class="modal__inf--text">11 онлайн-уроков + обратные связи от ведущих</p>
-                        <p class="modal__inf--text">Всесторонняя подготовка будущих родителей к беременности и родам: от момента планирования ребенка до послеродового восстановления женщины и ухода за новорожденным. Охватывает аспекты психологии, здоровья, отношений, физиологии. Курс полезен в первую очередь будущим мамам, но также содержит важную информацию для отцов. Основан на личном опыте экспертов и проверенных ими методиках.</p>
-                        <!-- /.modal__inf-text -->
-                        <p class="modal__inf--price">Цена без скидки: 7500 рублей</p>
-                        <!-- /.modal__inf-price -->
-                        <a class="button button-more" href="#">Купить I пакет</a> <!-- /.button -->
+                <div class="package__item--body">
+                    <ul>
+                        <li><a class="package__item--body__link" href="#ex1" rel="modal:open">«Осознанное родительство»<br> 1 и 2 ступень </a></li>
+                        <div id="ex1" class="modal modal__inf">
+                            <p class="modal__inf--title">Курс “Осознанное родительство”<br> I ступень</p>
+                            <!-- /.modal__inf-title -->
+                            <p class="modal__inf--text">11 онлайн-уроков + обратные связи от ведущих</p>
+                            <p class="modal__inf--text">Всесторонняя подготовка будущих родителей к беременности и родам: от момента планирования ребенка до послеродового восстановления женщины и ухода за новорожденным. Охватывает аспекты психологии, здоровья, отношений, физиологии. Курс полезен в первую очередь будущим мамам, но также содержит важную информацию для отцов. Основан на личном опыте экспертов и проверенных ими методиках.</p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--price">Цена без скидки: 7500 рублей</p>
+                            <!-- /.modal__inf-price -->
+                            <a class="button button-more" href="#">Купить I пакет</a>
+                            <!-- /.button -->
+                        </div>
+                        <!-- /.package__link-inf -->
+                        <li><a class="package__item--body__link" href="#">«Родители. Род. Семья»</a></li>
+                        <li><a class="package__item--body__link" href="#">«Секреты гениальности» </a></li>
+                        <li><a class="package__item--body__link" href="#">«Коммуникации и манипуляции» </a></li>
+                        <li><a class="package__item--body__link" href="#">«Ритуал формирования намерений на 2021 год»</a></li>
+                        <li><a class="package__item--body__link" href="#">Закрытый клуб в Инстаграм </a></li>
+                    </ul>
+                </div>
+                <!-- /.package__item-body -->
+                <div class="package__item--price">
+                    <div class="package__item--price__title">Цена за 1 пакет:</div>
+                    <!-- /.package__item--price__title -->
+                    <div class="package__item--price__old -dark">57 990 рублей</div>
+                    <!-- /.package__item--price__title -->
+                    <div class="package__item--price__new">9 500 рублей</div>
+                    <!-- /.package__item--price__title -->
+                </div>
+                <!-- /.package__item-price -->
+                <div class="package__item--footer">
+                    <div class="package__item--footer__buy">
+                        <a class="button button-card" href="#">Купить</a>
+                        <a class="arrow" href="#">
+                            <svg><use href="sprite.svg#arrow"></use></svg>
+                        </a>
+                        <!-- /.arrow -->
                     </div>
-                    <!-- /.package__link-inf -->
-                    <a class="package__link -dark" href="#">"Родители. Род. Семья"</a>
-                    <a class="package__link -dark" href="#">"Секреты гениальности"</a>
-                    <a class="package__link -dark" href="#">"Коммуникации и манипуляции"</a>
-                    <a class="package__link -dark" href="#">"Ритуал формирования намерений на 2021 год"</a>
-                    <a class="package__link -dark" href="#">"Закрытый клуб в Инстаграм"</a>
+                    <!-- /.package__item--footer__buy -->
                 </div>
-                <!-- /.package__inner-text -->
-                <div class="package__cost">
-                    <span class="package__cost--title -dark">Цена за 1 пакет:</span>
-                    <!-- /.package__cost-title -->
-                    <span class="package__cost--old -dark">57 990 рублей</span>
-                    <!-- /.package__cost-old -->
-                    <span class="package__cost--new -red">9 500 рублей</span>
-                    <!-- /.package__cost-old -->
-                </div>
-                <!-- /.package__cost -->
-                <div class="package__item--footer">
-                    <a class="button button-card" href="#">Купить</a> 
-                    <!-- /.button -->
-                    <a class="arrow" href="#">
-                        <svg><use href="sprite.svg#arrow"></use></svg>
-                    </a>
-                    <!-- /.arrow -->
-                </div>
+                <!-- /.package__item--footer -->
             </div>
-            <!-- /.package__inner-item -->
-
-            <div class="package__inner--item package__item">
+            <!-- /.package__item -->
+            <div class="package__item">
+                <img class="package__img package__img--red" src="img/animal-2.svg" alt="Бычок">
                 <div class="package__item--header">
-                    <h3 class="package__item--header__title">II пакет</h3>
-                    <!-- /.package__item-header__title -->
-                    <h4 class="package__item--header__subtitle">Чтобы увидеть описание курса, нажмите на название</h4>
-                    <!-- /.package__item-header__subtitle -->
+                    <h4 class="package__item--header__title white">II пакет</h4>
+                    <!-- /.package__item--header__title -->
+                    <small class="white">Чтобы увидеть описание курса, нажмите на название</small>
                 </div>
                 <!-- /.package__item-header -->
-                <div class="package__item--text">
-                    <a class="package__link" href="#">"Осознанное родительство" 1 и 2 ступень</a>
-                    <a class="package__link" href="#">"Родители. Род. Семья"</a>
-                    <a class="package__link" href="#">"Секреты гениальности"</a>
-                    <a class="package__link" href="#">"Коммуникации и манипуляции"</a>
-                    <a class="package__link" href="#">"Ритуал формирования намерений на 2021 год"</a>
-                    <a class="package__link" href="#">"Закрытый клуб в Инстаграм"</a>
+                <div class="package__item--body">
+                    <ul>
+                        <li><a class="package__item--body__link white" href="#ex1" rel="modal:open">«Осознанное родительство»<br> 1 и 2 ступень </a></li>
+                        <div id="ex1" class="modal modal__inf">
+                            <p class="modal__inf--title">Курс “Осознанное родительство”<br> I ступень</p>
+                            <!-- /.modal__inf-title -->
+                            <p class="modal__inf--text">11 онлайн-уроков + обратные связи от ведущих</p>
+                            <p class="modal__inf--text">Всесторонняя подготовка будущих родителей к беременности и родам: от момента планирования ребенка до послеродового восстановления женщины и ухода за новорожденным. Охватывает аспекты психологии, здоровья, отношений, физиологии. Курс полезен в первую очередь будущим мамам, но также содержит важную информацию для отцов. Основан на личном опыте экспертов и проверенных ими методиках.</p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--price">Цена без скидки: 7500 рублей</p>
+                            <!-- /.modal__inf-price -->
+                            <a class="button button-more" href="#">Купить I пакет</a>
+                            <!-- /.button -->
+                        </div>
+                        <!-- /.package__link-inf -->
+                        <li><a class="package__item--body__link white" href="#">«Родители. Род. Семья»</a></li>
+                        <li><a class="package__item--body__link white" href="#">«Секреты гениальности» </a></li>
+                        <li><a class="package__item--body__link white" href="#">«Коммуникации и манипуляции» </a></li>
+                        <li><a class="package__item--body__link white" href="#">«Ритуал формирования намерений на 2021 год»</a></li>
+                        <li><a class="package__item--body__link white" href="#">Закрытый клуб в Инстаграм </a></li>
+                    </ul>
                 </div>
-                <!-- /.package__inner-text -->
-                <div class="package__cost">
-                    <span class="package__cost--title">Цена за 1 пакет:</span>
-                    <!-- /.package__cost-title -->
-                    <span class="package__cost--old">57 990 рублей</span>
-                    <!-- /.package__cost-old -->
-                    <span class="package__cost--new">9 500 рублей</span>
-                    <!-- /.package__cost-old -->
+                <!-- /.package__item-body -->
+                <div class="package__item--price">
+                    <div class="package__item--price__title white">Цена за 1 пакет:</div>
+                    <!-- /.package__item--price__title -->
+                    <p class="package__item--price__old white ">57 990 рублей</p>
+                    <!-- /.package__item--price__title -->
+                    <div class="package__item--price__new white">9 500 рублей</div>
+                    <!-- /.package__item--price__title -->
                 </div>
-                <!-- /.package__cost -->
+                <!-- /.package__item-price -->
                 <div class="package__item--footer">
-                    <a class="button button-card" href="#">Купить</a> 
-                    <!-- /.button -->
-                    <a class="arrow" href="#">
-                        <svg><use href="sprite.svg#arrow"></use></svg>
-                    </a>
-                    <!-- /.arrow -->
+                    <div class="package__item--footer__buy">
+                        <a class="button button-card button-card__green" href="#">Купить</a>
+                        <a class="arrow -yellow" href="#">
+                            <svg><use href="sprite.svg#arrow"></use></svg>
+                        </a>
+                        <!-- /.arrow -->
+                    </div>
+                    <!-- /.package__item--footer__buy -->
                 </div>
+                <!-- /.package__item--footer -->
             </div>
-            <!-- /.package__inner-item -->
-
-            <div class="package__inner--item package__item">
+            <!-- /.package__item -->
+            <div class="package__item">
+                <img class="package__img package__img--green" src="img/animal-3.svg" alt="Бычок">
                 <div class="package__item--header">
-                    <h3 class="package__item--header__title">III пакет</h3>
-                    <!-- /.package__item-header__title -->
-                    <h4 class="package__item--header__subtitle">Чтобы увидеть описание курса, нажмите на название</h4>
-                    <!-- /.package__item-header__subtitle -->
+                    <h4 class="package__item--header__title white">III пакет</h4>
+                    <!-- /.package__item--header__title -->
+                    <small class="white">Чтобы увидеть описание курса, нажмите на название</small>
                 </div>
                 <!-- /.package__item-header -->
-                <div class="package__item--text">
-                    <a class="package__link" href="#">"Осознанное родительство" 1 и 2 ступень</a>
-                    <a class="package__link" href="#">"Родители. Род. Семья"</a>
-                    <a class="package__link" href="#">"Секреты гениальности"</a>
-                    <a class="package__link" href="#">"Коммуникации и манипуляции"</a>
-                    <a class="package__link" href="#">"Ритуал формирования намерений на 2021 год"</a>
-                    <a class="package__link" href="#">"Закрытый клуб в Инстаграм"</a>
+                <div class="package__item--body">
+                    <ul>
+                        <li><a class="package__item--body__link white" href="#ex1" rel="modal:open">«Осознанное родительство»<br> 1 и 2 ступень </a></li>
+                        <div id="ex1" class="modal modal__inf">
+                            <p class="modal__inf--title">Курс “Осознанное родительство”<br> I ступень</p>
+                            <!-- /.modal__inf-title -->
+                            <p class="modal__inf--text">11 онлайн-уроков + обратные связи от ведущих</p>
+                            <p class="modal__inf--text">Всесторонняя подготовка будущих родителей к беременности и родам: от момента планирования ребенка до послеродового восстановления женщины и ухода за новорожденным. Охватывает аспекты психологии, здоровья, отношений, физиологии. Курс полезен в первую очередь будущим мамам, но также содержит важную информацию для отцов. Основан на личном опыте экспертов и проверенных ими методиках.</p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--price">Цена без скидки: 7500 рублей</p>
+                            <!-- /.modal__inf-price -->
+                            <a class="button button-more" href="#">Купить I пакет</a>
+                            <!-- /.button -->
+                        </div>
+                        <!-- /.package__link-inf -->
+                        <li><a class="package__item--body__link white" href="#">«Родители. Род. Семья»</a></li>
+                        <li><a class="package__item--body__link white" href="#">«Секреты гениальности» </a></li>
+                        <li><a class="package__item--body__link white" href="#">«Коммуникации и манипуляции» </a></li>
+                        <li><a class="package__item--body__link white" href="#">«Ритуал формирования намерений на 2021 год»</a></li>
+                        <li><a class="package__item--body__link white" href="#">Закрытый клуб в Инстаграм </a></li>
+                    </ul>
                 </div>
-                <!-- /.package__inner-text -->
-                <div class="package__cost">
-                    <span class="package__cost--title">Цена за 1 пакет:</span>
-                    <!-- /.package__cost-title -->
-                    <span class="package__cost--old">57 990 рублей</span>
-                    <!-- /.package__cost-old -->
-                    <span class="package__cost--new">9 500 рублей</span>
-                    <!-- /.package__cost-old -->
+                <!-- /.package__item-body -->
+                <div class="package__item--price">
+                    <div class="package__item--price__title white">Цена за 1 пакет:</div>
+                    <!-- /.package__item--price__title -->
+                    <p class="package__item--price__old white ">57 990 рублей</p>
+                    <!-- /.package__item--price__title -->
+                    <div class="package__item--price__new white">9 500 рублей</div>
+                    <!-- /.package__item--price__title -->
                 </div>
-                <!-- /.package__cost -->
+                <!-- /.package__item-price -->
                 <div class="package__item--footer">
-                    <a class="button button-card" href="#">Купить</a> 
-                    <!-- /.button -->
-                    <a class="arrow -yellow" href="#">
-                        <svg><use href="sprite.svg#arrow"></use></svg>
-                    </a>
-                    <!-- /.arrow -->
+                    <div class="package__item--footer__buy">
+                        <a class="button button-card" href="#">Купить</a>
+                        <a class="arrow -yellow" href="#">
+                            <svg><use href="sprite.svg#arrow"></use></svg>
+                        </a>
+                        <!-- /.arrow -->
+                    </div>
+                    <!-- /.package__item--footer__buy -->
                 </div>
+                <!-- /.package__item--footer -->
             </div>
-            <!-- /.package__inner-item -->
+            <!-- /.package__item -->
         </div>
         <!-- /.package__inner -->
-    </section>
+    </div>
     <!-- /.package -->
     <section class="autor">
         <div class="container">
