--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preload" href="fonts/gilroy-black.ttf" as="font"type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" href="fonts/gilroy-black.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="fonts/ProximaNova-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="fonts/ProximaNova-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
 
@@ -104,7 +104,7 @@
             <div class="video__inner">
                 <h2 class="title title-video">Заголовок для видео</h2>
                 <!-- /.title -->
-                <iframe loading="lazy" class="video__inner--item" src="https://www.youtube.com/embed/SEEV5RuiIcU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe loading="lazy" class="video__inner--item" src="https://www.youtube.com/embed/SEEV5RuiIcU" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <!-- /.video__inner -->
         </div>
@@ -116,10 +116,10 @@
         <!-- /.title -->
         <div class="package__inner">
             <div class="package__item">
-                <img class="package__img package__img--white" src="img/animal-1.svg" alt="Бычок">
+                <img class="package__img package__img--white" src="img/animal-1.svg" alt="Бычок" loading="lazy">
                 <div class="package__item--header">
                     <h4 class="package__item--header__title">I пакет</h4>
-                    <!-- /.package__item--header__title -->
+                    <!-- /.package__item-header__title -->
                     <small>Чтобы увидеть описание курса, нажмите на название</small>
                 </div>
                 <!-- /.package__item-header -->
@@ -148,11 +148,11 @@
                 <!-- /.package__item-body -->
                 <div class="package__item--price">
                     <div class="package__item--price__title">Цена за 1 пакет:</div>
-                    <!-- /.package__item--price__title -->
+                    <!-- /.package__item-price__title -->
                     <div class="package__item--price__old -dark">57 990 рублей</div>
-                    <!-- /.package__item--price__title -->
+                    <!-- /.package__item-price__title -->
                     <div class="package__item--price__new">9 500 рублей</div>
-                    <!-- /.package__item--price__title -->
+                    <!-- /.package__item-price__title -->
                 </div>
                 <!-- /.package__item-price -->
                 <div class="package__item--footer">
@@ -163,16 +163,16 @@
                         </a>
                         <!-- /.arrow -->
                     </div>
-                    <!-- /.package__item--footer__buy -->
+                    <!-- /.package__item-footer__buy -->
                 </div>
-                <!-- /.package__item--footer -->
+                <!-- /.package__item-footer -->
             </div>
             <!-- /.package__item -->
             <div class="package__item">
-                <img class="package__img package__img--red" src="img/animal-2.svg" alt="Бычок">
+                <img class="package__img package__img--red" src="img/animal-2.svg" alt="Бычок" loading="lazy">
                 <div class="package__item--header">
                     <h4 class="package__item--header__title white">II пакет</h4>
-                    <!-- /.package__item--header__title -->
+                    <!-- /.package__item-header__title -->
                     <small class="white">Чтобы увидеть описание курса, нажмите на название</small>
                 </div>
                 <!-- /.package__item-header -->
@@ -201,11 +201,11 @@
                 <!-- /.package__item-body -->
                 <div class="package__item--price">
                     <div class="package__item--price__title white">Цена за 1 пакет:</div>
-                    <!-- /.package__item--price__title -->
+                    <!-- /.package__item-price__title -->
                     <p class="package__item--price__old white ">57 990 рублей</p>
-                    <!-- /.package__item--price__title -->
+                    <!-- /.package__item-price__title -->
                     <div class="package__item--price__new white">9 500 рублей</div>
-                    <!-- /.package__item--price__title -->
+                    <!-- /.package__item-price__title -->
                 </div>
                 <!-- /.package__item-price -->
                 <div class="package__item--footer">
@@ -216,16 +216,16 @@
                         </a>
                         <!-- /.arrow -->
                     </div>
-                    <!-- /.package__item--footer__buy -->
+                    <!-- /.package__item-footer__buy -->
                 </div>
-                <!-- /.package__item--footer -->
+                <!-- /.package__item-footer -->
             </div>
             <!-- /.package__item -->
             <div class="package__item">
-                <img class="package__img package__img--green" src="img/animal-3.svg" alt="Бычок">
+                <img class="package__img package__img--green" src="img/animal-3.svg" alt="Бычок" loading="lazy">
                 <div class="package__item--header">
                     <h4 class="package__item--header__title white">III пакет</h4>
-                    <!-- /.package__item--header__title -->
+                    <!-- /.package__item-header__title -->
                     <small class="white">Чтобы увидеть описание курса, нажмите на название</small>
                 </div>
                 <!-- /.package__item-header -->
@@ -254,11 +254,11 @@
                 <!-- /.package__item-body -->
                 <div class="package__item--price">
                     <div class="package__item--price__title white">Цена за 1 пакет:</div>
-                    <!-- /.package__item--price__title -->
+                    <!-- /.package__item-price__title -->
                     <p class="package__item--price__old white ">57 990 рублей</p>
-                    <!-- /.package__item--price__title -->
+                    <!-- /.package__item-price__title -->
                     <div class="package__item--price__new white">9 500 рублей</div>
-                    <!-- /.package__item--price__title -->
+                    <!-- /.package__item-price__title -->
                 </div>
                 <!-- /.package__item-price -->
                 <div class="package__item--footer">
@@ -269,9 +269,9 @@
                         </a>
                         <!-- /.arrow -->
                     </div>
-                    <!-- /.package__item--footer__buy -->
+                    <!-- /.package__item-footer__buy -->
                 </div>
-                <!-- /.package__item--footer -->
+                <!-- /.package__item-footer -->
             </div>
             <!-- /.package__item -->
         </div>
