decided to add new element

--- a/index.html
+++ b/index.html
@@ -298,6 +298,10 @@
             <div class="package__item">
                 <img class="package__img package__img--red" src="img/animal-2.svg" alt="Бычок" loading="lazy">
                 <div class="package__item--header">
+                    <div class="mostpop">
+                        Рекомендуем!
+                    </div>
+                    <!-- /.mostpop -->
                     <h4 class="package__item--header__title white">II пакет</h4>
                     <!-- /.package__item-header__title -->
                     <small class="white">Чтобы увидеть описание курса, нажмите на название</small>
