--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <div class="container">
             <div class="header__inner">
                 <a href="#" class="header__logo">
-                    <img src="img/logo.png" alt="Образовательный центр Вадима Куркина">
+                    <img class="header__logo--desktop" src="img/logo.png" alt="Образовательный центр Вадима Куркина">
+                    <img class="header__logo--mobile" src="img/logo-w.png" alt="Образовательный центр Вадима Куркина">
                 </a> <!-- /.header__logo -->
                 <div class="header__call">
                     <div class="header__call--img">
