Little changes of description

--- a/index.html
+++ b/index.html
@@ -296,8 +296,10 @@
                         <!-- /.package__link-inf -->
                         <li><a class="package__item--body__link" href="#ex101" rel="modal:open">«Все о твоей красоте»</a></li>
                         <div id="ex101" class="modal modal__inf">
-                            <p class="modal__inf--title"> «Все о твоей красоте»</p>
+                            <p class="modal__inf--title">Курс «Все о твоей красоте» </p>
                             <!-- /.modal__inf-title -->
+                            <p class="modal__inf--text">13 уроков с бонусами. Видеозапись тренинга Юлии Куркиной</p>
+                            <!-- /.modal__inf-text -->
                             <p class="modal__inf--text">Уникальный курс по уходу за собой, подбору косметики и макияжу с обзором средств, особенностей разных типов кожи и важных аспектов красоты и здоровья, которые стоит узнать каждой женщине. Ведет Юлия Куркина – дипломированный косметолог, психолог и специалист по здоровому образу жизни.</p>
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--price">Стоимость: 6000 рублей</p>
@@ -306,12 +308,13 @@
                             <!-- /.button -->
                         </div>
                         <!-- /.package__link-inf -->
-                        <li><a class="package__item--body__link" href="#ex111" rel="modal:open">Книга (электронная + аудио)</a></li>
+                        <li><a class="package__item--body__link" href="#ex111" rel="modal:open">Книга "Психолог в кармане" (электронная + аудиоверсия)</a></li>
                         <div id="ex111" class="modal modal__inf">
-                            <p class="modal__inf--title">Книга (электронная + аудио)</p>
+                            <p class="modal__inf--title">Книга Вадима Куркина "Психолог в кармане или 101 практика на все случаи жизни" </p>
                             <!-- /.modal__inf-title -->
-                            <p class="modal__inf--text">Сборник практик для разных ситуаций и случаев. Простые методики, которые можно применять сразу же и моментально получать результат. Подходят всем и каждому. В книге вы найдете психологические практики, которая помогут устранить препятствия, помогут достичь целей и улучшить жизнь. Отношения, деньги, семья, увлечения, здоровье и внутренняя гармония – в книге есть простые и действенные методы для проработки каждой из этих сфер. 
-                            </p>
+                            <p class="modal__inf--text">Электронная и аудиоверсия</p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--text">Сборник практик для разных ситуаций и случаев. Простые методики, которые можно применять сразу же и моментально получать результат. Подходят всем и каждому. В книге вы найдете психологические практики, которая помогут устранить препятствия, помогут достичь целей и улучшить жизнь. Отношения, деньги, семья, увлечения, здоровье и внутренняя гармония – в книге есть простые и действенные методы для проработки каждой из этих сфер.</p>
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--price">Стоимость: 500 рублей</p>
                             <!-- /.modal__inf-price -->
@@ -521,8 +524,10 @@
                         <!-- /.package__link-inf -->
                         <li><a class="package__item--body__link white" href="#ex203" rel="modal:open">«Все о твоей красоте»</a></li>
                         <div id="ex203" class="modal modal__inf">
-                            <p class="modal__inf--title"> «Все о твоей красоте»</p>
+                            <p class="modal__inf--title">Курс «Все о твоей красоте» </p>
                             <!-- /.modal__inf-title -->
+                            <p class="modal__inf--text">13 уроков с бонусами. Видеозапись тренинга Юлии Куркиной</p>
+                            <!-- /.modal__inf-text -->
                             <p class="modal__inf--text">Уникальный курс по уходу за собой, подбору косметики и макияжу с обзором средств, особенностей разных типов кожи и важных аспектов красоты и здоровья, которые стоит узнать каждой женщине. Ведет Юлия Куркина – дипломированный косметолог, психолог и специалист по здоровому образу жизни.</p>
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--price">Стоимость: 6000 рублей</p>
@@ -531,12 +536,13 @@
                             <!-- /.button -->
                         </div>
                         <!-- /.package__link-inf -->
-                        <li><a class="package__item--body__link white" href="#ex204" rel="modal:open">Книга (электронная + аудио)</a></li>
+                        <li><a class="package__item--body__link white" href="#ex204" rel="modal:open">Книга "Психолог в кармане" (электронная + аудиоверсия)</a></li>
                         <div id="ex204" class="modal modal__inf">
-                            <p class="modal__inf--title">Книга (электронная + аудио)</p>
+                            <p class="modal__inf--title">Книга Вадима Куркина "Психолог в кармане или 101 практика на все случаи жизни" </p>
                             <!-- /.modal__inf-title -->
-                            <p class="modal__inf--text">Сборник практик для разных ситуаций и случаев. Простые методики, которые можно применять сразу же и моментально получать результат. Подходят всем и каждому. В книге вы найдете психологические практики, которая помогут устранить препятствия, помогут достичь целей и улучшить жизнь. Отношения, деньги, семья, увлечения, здоровье и внутренняя гармония – в книге есть простые и действенные методы для проработки каждой из этих сфер. 
-                            </p>
+                            <p class="modal__inf--text">Электронная и аудиоверсия</p>
+                            <!-- /.modal__inf-text -->
+                            <p class="modal__inf--text">Сборник практик для разных ситуаций и случаев. Простые методики, которые можно применять сразу же и моментально получать результат. Подходят всем и каждому. В книге вы найдете психологические практики, которая помогут устранить препятствия, помогут достичь целей и улучшить жизнь. Отношения, деньги, семья, увлечения, здоровье и внутренняя гармония – в книге есть простые и действенные методы для проработки каждой из этих сфер.</p>
                             <!-- /.modal__inf-text -->
                             <p class="modal__inf--price">Стоимость: 500 рублей</p>
                             <!-- /.modal__inf-price -->
@@ -769,8 +775,10 @@
                             <!-- /.package__link-inf -->
                             <li><a class="package__item--body__link white" href="#ex305" rel="modal:open">«Все о твоей красоте»</a></li>
                             <div id="ex305" class="modal modal__inf">
-                                <p class="modal__inf--title"> «Все о твоей красоте»</p>
+                                <p class="modal__inf--title">Курс «Все о твоей красоте» </p>
                                 <!-- /.modal__inf-title -->
+                                <p class="modal__inf--text">13 уроков с бонусами. Видеозапись тренинга Юлии Куркиной</p>
+                                <!-- /.modal__inf-text -->
                                 <p class="modal__inf--text">Уникальный курс по уходу за собой, подбору косметики и макияжу с обзором средств, особенностей разных типов кожи и важных аспектов красоты и здоровья, которые стоит узнать каждой женщине. Ведет Юлия Куркина – дипломированный косметолог, психолог и специалист по здоровому образу жизни.</p>
                                 <!-- /.modal__inf-text -->
                                 <p class="modal__inf--price">Стоимость: 6000 рублей</p>
@@ -779,12 +787,13 @@
                                 <!-- /.button -->
                             </div>
                             <!-- /.package__link-inf -->
-                            <li><a class="package__item--body__link white" href="#ex306" rel="modal:open">Книга (электронная + аудио)</a></li>
+                            <li><a class="package__item--body__link white" href="#ex306" rel="modal:open">Книга "Психолог в кармане" (электронная + аудиоверсия)</a></li>
                             <div id="ex306" class="modal modal__inf">
-                                <p class="modal__inf--title">Книга (электронная + аудио)</p>
+                                <p class="modal__inf--title">Книга Вадима Куркина "Психолог в кармане или 101 практика на все случаи жизни" </p>
                                 <!-- /.modal__inf-title -->
-                                <p class="modal__inf--text">Сборник практик для разных ситуаций и случаев. Простые методики, которые можно применять сразу же и моментально получать результат. Подходят всем и каждому. В книге вы найдете психологические практики, которая помогут устранить препятствия, помогут достичь целей и улучшить жизнь. Отношения, деньги, семья, увлечения, здоровье и внутренняя гармония – в книге есть простые и действенные методы для проработки каждой из этих сфер. 
-                                </p>
+                                <p class="modal__inf--text">Электронная и аудиоверсия</p>
+                                <!-- /.modal__inf-text -->
+                                <p class="modal__inf--text">Сборник практик для разных ситуаций и случаев. Простые методики, которые можно применять сразу же и моментально получать результат. Подходят всем и каждому. В книге вы найдете психологические практики, которая помогут устранить препятствия, помогут достичь целей и улучшить жизнь. Отношения, деньги, семья, увлечения, здоровье и внутренняя гармония – в книге есть простые и действенные методы для проработки каждой из этих сфер.</p>
                                 <!-- /.modal__inf-text -->
                                 <p class="modal__inf--price">Стоимость: 500 рублей</p>
                                 <!-- /.modal__inf-price -->
